[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "karma"
version = "0.1.0"

[dependencies]
rand = "0.3.15"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
